--- a/.env
+++ b/.env
@@ -60,6 +60,7 @@ IPL_GTFS_SWAGGER_UI_PORT=4001
 
 # Geoserver variables
 GEOSERVER_PROXY_BASE_URL=http://localhost:8600/geoserver
+GEOSERVER_CSRF_WHITELIST=mobidata-bw.de
 GEOSERVER_IMAGE=geosolutionsit/geoserver:2.24.1
 GEOSERVER_PORT=8600
 GEOSERVER_INITIAL_MEMORY=512M
